--- a/packages/icons-svg/package.json
+++ b/packages/icons-svg/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@ant-design/icons-svg",
-  "version": "4.4.2",
+  "name": "@buianhthang/icons-svg",
+  "version": "4.5.1",
   "sideEffects": false,
-  "description": "Abstract nodes for ant design icons.",
+  "description": "Forked Abstract nodes for ant design icons.",
   "contributors": [
     "HeskeyBaozi <hezhiyu233@foxmail.com>"
   ],
-  "homepage": "https://github.com/ant-design/ant-design-icons/",
+  "homepage": "https://github.com/anhthang/ant-design-icons/",
   "license": "MIT",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ant-design/ant-design-icons.git"
+    "url": "git+https://github.com/anhthang/ant-design-icons.git"
   },
   "scripts": {
     "g": "npm run generate",
@@ -33,7 +33,7 @@
     "digest": "node scripts/digest.js"
   },
   "bugs": {
-    "url": "https://github.com/ant-design/ant-design-icons/issues"
+    "url": "https://github.com/anhthang/ant-design-icons/issues"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
