feat: change to forked icons-svg

--- a/packages/icons-vue/package.json
+++ b/packages/icons-vue/package.json
@@ -71,7 +71,7 @@
   },
   "dependencies": {
     "@ant-design/colors": "^7.0.0",
-    "@ant-design/icons-svg": "^4.4.0"
+    "@buianhthang/icons-svg": "^4.5.1"
   },
   "config": {
     "port": 9528,
